# mlsc-timetable-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml  railway.json  readme.md  requirements.txt
assets/: announcements.json  exam_dates.json  subjects.json
docs/: ADMIN_PANEL.md  API.md  FINAL_V1_CHANGES.md  GCP_CLOUD_BUILD.md  openapi.json
scripts/: diff_batches_vs_timetables.py  import_subjects.py  list_admin_routes.py  parse_course_scheme.py  reset_database.py
server/: __init__.py  app.py  auth.py  calendar_parser.py  calendar_storage.py  calendar_sync.py  clerk_jwt.py  config.py  doctor.py  ingest.py  rate_limit.py  scheme_parser.py  storage.py
server/db/: __init__.py  init.py  models.py
server/routers/: admin.py  analytics.py  announcements.py  baselines.py  batch.py  calendar.py  change_requests.py  contributors.py  current.py  me.py  timetable.py
timetable_api/: app.py  schemas.py
timetable_parser/: __init__.py  cli.py
timetable_parser/core/: confidence.py  elective_parser.py  models.py  sheet_geometry.py  subject_catalog.py  subject_parser.py
timetable_parser/extractors/: class_blocks.py
timetable_parser/serializers/: api.py  json.py
