[project]
name = "timetable-parser"
version = "0.1.0"
description = "Utilities for parsing spreadsheet-based college timetables."
requires-python = ">=3.11"
dependencies = [
    "openpyxl>=3.1",
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "python-multipart>=0.0.9",
    "beanie>=1.27,<2",
    "motor>=3.5",
    "httpx>=0.27",
    "slowapi>=0.1.9",
    "pyjwt[crypto]>=2.8",
    "cryptography>=42",
    "google-auth-oauthlib>=1.2",
    "pymongo>=4.8",
    "pdfplumber>=0.11",
]

[project.scripts]
mlsc-timetable = "timetable_parser.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["timetable_parser", "server"]
